# gridrival

./: .bumpversion.cfg  README.md  gridrival.code-workspace  gridrival.ipynb  notebook.ipynb  probabilities.ipynb  setup.cfg  setup.py  tox.ini
src/: gridrival.ipynb
src/gridrival/: drivers.py  fantasy.py  fantasyteam.py  helpers.py  objects.py  optimization.py  scoring.py  solve.py  teams.py
src/gridrival/odds/: odds.ipynb  odds.py
src/gridrival/optimization/: basic.py
src/gridrival/probabilities/: __init__.py  betting_odds.py  completion.py  odds.ipynb
src/gridrival/scoring/: __init__.py
