[metadata]
name = gridrival
description = Quantitative Model for optimization of fantasy team in Grid Rival.
long_description = file: README.md
version = 1.0.0
author = Pablo Forero
author_email = gridrival@pabloforero.eu
url = https://github.com/pforero/gridrival/

[options]
package_dir=
    =src
packages = find:
zip_safe = False
python_requires = >=3.7
install_requires =
    pandas
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
dev =
    tox

[options.entry_points]
console_scripts =
    gridrival = gridrival.solve:main

[tool:isort]
known_first_party = arcus
default_section = THIRDPARTY
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[flake8]
max-line-length=88
ignore = E203, E265, W503, E266
max-complexity = 18
select = B,C,E,F,W,T4,B9